// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`applyFilter should should initialize 1`] = `
{
  "filter": {
    "filters": [
      {
        "filters": [
          {
            "field": "ABC",
            "isRelativeValue": false,
            "operator": "eq",
            "value": 2,
          },
        ],
        "logic": "and",
      },
    ],
    "logic": "and",
  },
}
`;

exports[`applyFilter should should override values 1`] = `
{
  "filter": {
    "filters": [
      {
        "filters": [
          {
            "field": "ABC",
            "operator": "lte",
            "value": 6,
          },
        ],
        "logic": "and",
      },
    ],
    "logic": "and",
  },
}
`;
